@@ -2,27 +2,40 @@ package edu.austral.ingsis.clifford.command;
 
 import edu.austral.ingsis.clifford.Directory;
 import edu.austral.ingsis.clifford.FileSystem;
-import java.util.ArrayList;
+import edu.austral.ingsis.clifford.results.Result;
 import java.util.List;
 
 public final class MkdirCommand implements Command {
   @Override
-  public String execute(FileSystem fileSystem, List<String> args) {
+  public CommandResult execute(FileSystem fileSystem, List<String> args) {
     if (!isValid(args)) {
-      return "mkdir expects exactly one argument.";
+      return CommandResult.error(fileSystem, "mkdir expects exactly one argument.");
     }
-    String directoryName = args.getFirst();
-    Directory currentDirectory = fileSystem.getCurrentDirectory();
-    if (directoryExists(currentDirectory, directoryName)) {
-      return "directory already exists";
+
+    String directoryName = args.get(0);
+    return createDirectory(fileSystem, directoryName);
+  }
+
+  private CommandResult createDirectory(FileSystem fileSystem, String directoryName) {
+    Result<Directory> currentDirResult = fileSystem.getCurrentDirectory();
+
+    if (!currentDirResult.isSuccess()) {
+      return CommandResult.error(fileSystem, currentDirResult.getErrorMessage());
     }
-    createDirectory(currentDirectory, directoryName);
-    return "'" + directoryName + "' directory created";
+
+    Directory currentDir = currentDirResult.getValue();
+
+    if (currentDir.containsElementWithName(directoryName)) {
+      return CommandResult.error(fileSystem, "directory already exists");
+    }
+
+    FileSystem newFileSystem = fileSystem.createDirectory(directoryName);
+    return CommandResult.success(newFileSystem, "'" + directoryName + "' directory created");
   }
 
   @Override
-  public String execute(FileSystem fileSystem) {
-    return "Expected arguments for mkdir command.";
+  public CommandResult execute(FileSystem fileSystem) {
+    return CommandResult.error(fileSystem, "Expected arguments for mkdir command.");
   }
 
   @Override
@@ -33,15 +46,5 @@ public final class MkdirCommand implements Command {
   @Override
   public String getName() {
     return "mkdir";
-  }
-
-  private boolean directoryExists(Directory current, String name) {
-    return current.getContent().stream()
-        .anyMatch(e -> e instanceof Directory && e.getName().equals(name));
-  }
-
-  private void createDirectory(Directory current, String name) {
-    Directory newDirectory = new Directory(name, current, new ArrayList<>());
-    current.getContent().add(newDirectory);
   }
 }
